Fix overflow issue on the original comment on tickets
Fixes https://pagure.io/pagure/issue/3955

--- a/pagure/static/pagure.css
+++ b/pagure/static/pagure.css
@@ -133,6 +133,12 @@ pre {
     min-height: 12rem;
 }
 
+#original_comment_box
+{
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
 .bodycontent
 {
 min-height: 85vh;
